--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="pt_br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=, initial-scale=1.0">
+    <title>Foguetes</title>
+</head>
+<body>
+    <h1>Foguetes do professor João</h1>
+    <h2>Site destinado à divulgação de projetos desenvolvidos pelo professor João</h2>
+    <h3>Ferramentas usadas</h3>
+    <ul>
+        <li>OpenRocket</li>
+        <li>AeroCP</li>
+        <li>CP_1.0</li>
+        <li>Apogee_1.0</li>
+        <li>Trajetoria.exe</li>
+    </ul>
+    <img src="imagens/fog.png" alt="">
+</body>
+</html>
